# Process-Mining-Project-Damen

./: Data_preparation.py  Graph_generation_idea1.py  Graph_generation_idea2.py  Graph_generation_idea3.py  Hours.py  README.md  event_knowledge_graph_generation_in_Neo4j.py  event_knowledge_graph_generation_in_Neo4j_idea2.py  exploration.ipynb  graph_date_project_as_cluster_AT1.py  graph_date_project_as_cluster_AT19.py  graph_date_project_as_cluster_AT4.py  graph_neo4j_database_query_AT1.py  graph_neo4j_database_query_AT19.py  graph_neo4j_database_query_AT4.py  graph_project_as_cluster_colored_person_under_project_AT1.py  graph_project_as_cluster_colored_person_under_project_AT19.py  graph_project_as_cluster_colored_person_under_project_AT4.py  pyproject.toml
