[tool.poetry]
name = "event-graph-visualizations"
version = "0.1.0"
description = "Thesis Project of Yanyun (Alice) Wang"
authors = ["Yanyun (Alice) Wang"]

[tool.poetry.dependencies]
python = "^3.9"
holidays = "^0.15"
pandas = "^1.4.4"
neo4j = "^5.0.0"
jupyter = "^1.0.0"
numpy = "^1.23.3"
graphviz = "^0.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
